--- a/acknowledgements.qmd
+++ b/acknowledgements.qmd
@@ -1,11 +1,11 @@
 # Acknowledgements
 
 This books was first written to be a guide for a course run by the Statistics
-Society Australia (SSA), and Melbourne Integrative Genomics (MIG) on November 12, 2018.
+Society Australia (SSA), and Melbourne Integrative Genomics (MIG) on November 12, 2018. Initially written as "Rmarkdown for Scientists", "Quarto for Scientists" takes the same format and makes it about Quarto.
 
 I'd like to first thank [Miles McBain](http://github.com/milesMcBain), for his working book, ["Git For Scientists"](https://milesmcbain.github.io/git_4_sci/index.html). This book inspired the structure and workflow of this existing book.
 
-I'd also like to thank Karthik Ram, Yoav Ram, Martin Fenner, Puneet Kishor, and Jonathan Dugan, involved with the [Scholarly Markdown](http://scholmd.org/) site. This has helped inform some of the structure of this book. I'd also like to thank Patrick Robotham for his helpful discussions when first creating this book.
+I'd also like to thank Karthik Ram, Yoav Ram, Martin Fenner, Puneet Kishor, and Jonathan Dugan, involved with the [Scholarly Markdown](https://web.archive.org/web/20210726210541/http://scholmd.org/) site. This has helped inform some of the structure of this book. I'd also like to thank [Patrick Robotham](https://www.linkedin.com/in/patrick-robotham-5499699/?originalSubdomain=au) for his helpful discussions when first creating this book.
 
 There have been various wonderful contributions from the community to fix typos in this book, I would like to thank [Allison Presmanes Hill](https://github.com/apreshill) [PR1](https://github.com/njtierney/rmd4sci/pull/15), [PR2](https://github.com/njtierney/rmd4sci/pull/16), as well as the many offline helpful conversations about serving this book online and other matters. I'd also like to thank [Murray Cadzow](https://github.com/murraycadzow) [PR](https://github.com/njtierney/rmd4sci/pull/26), and [Federico Marini](https://github.com/federicomarini)  [PR](https://github.com/njtierney/rmd4sci/pull/28), and 
-Raymond B Huey for their thoughtful contributions.
+[Raymond B Huey](https://raymond-b-huey.netlify.app/) for their thoughtful contributions.
