--- a/references.qmd
+++ b/references.qmd
@@ -1,24 +1,11 @@
 # References
 
-[R Markdown: The Definitive Guide](https://bookdown.org/yihui/rmarkdown/)
+[Quarto website](https://quarto.org/)
 
-[Bookdown](https://bookdown.org/yihui/bookdown/)
+The Posit [cheatsheet](https://rstudio.github.io/cheatsheets/html/quarto.html)
 
-The RStudio [cheatsheet](https://www.rstudio.com/wp-content/uploads/2016/03/rmarkdown-cheatsheet-2.0.pdf)
+[R For Data Science section on Quarto](https://r4ds.hadley.nz/quarto)
 
-The [official documentation of knitr](https://yihui.name/knitr/options/)
+Extending word templates: https://quarto.org/docs/output-formats/ms-word-templates.html
 
-[R4ds section on rmarkdown](http://r4ds.had.co.nz/r-markdown.html)
-
-Extending word templates: http://rmarkdown.rstudio.com/articles_docx.html
-
-- Templates: https://github.com/Pakillo/rmdTemplates
-
-Notebooks: http://rmarkdown.rstudio.com/r_notebooks.html
-
-- [rmarkdown chapter in R for data science](http://r4ds.had.co.nz/r-markdown.html)
-- [knitr in a nutshell](http://kbroman.org/knitr_knutshell/)
-- [Maëlle Salmon's Rmarkdown course](https://github.com/maelle/rmd_course_isglobal)
-- [Jennifer Thompson's Rmarkdown course](https://github.com/jenniferthompson/RepResearchRMarkdown)
-
-- [happy git with r](http://happygitwithr.com/)
+[happy git with r](http://happygitwithr.com/)
